// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaySelect should render a disabled select element 1`] = `
<div class="form-group">
  <select class="form-control" disabled="disabled">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render a multiple select element 1`] = `
<div class="form-group">
  <select class="form-control" multiple="multiple">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render a select element 1`] = `
<div class="form-group">
  <select class="form-control">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render a select element with classes 1`] = `
<div class="form-group my-custom-class">
  <select class="form-control">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render a select element with id 1`] = `
<div class="form-group" id="myId">
  <select class="form-control">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render a select element with id 2`] = `
<div class="form-group" id="myselectid">
  <select class="form-control">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render a select element with label 1`] = `
<div class="form-group">
  <label>My Select</label>
  <select class="form-control" aria-label="My Select">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render a select element with name 1`] = `
<div class="form-group">
  <select class="form-control" name="myselectname">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render a select element with preselected option 1`] = `
<div class="form-group">
  <select class="form-control">
    <option value="1">Option 1</option>
    <option selected="selected" value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render an inline group multiple select element 1`] = `
<div class="form-group-item">
  <select class="form-control" multiple="multiple">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;

exports[`ClaySelect should render an inline group select element 1`] = `
<div class="form-group-item">
  <label>My Select</label>
  <select class="form-control" aria-label="My Select">
    <option value="1">Option 1</option>
    <option value="2">Option 2</option>
  </select>
</div>
`;
